Fix vertical alignment of success message.

--- a/src/main/webapp/sass-hidden/tab.sass
+++ b/src/main/webapp/sass-hidden/tab.sass
@@ -315,7 +315,7 @@
 
       &.success-message
         display: none
-        margin: 8.5px 4px
+        margin: 12.5px 4px
 
         &:after
           display: none
